# MARS-VINS

./: CMakeLists.txt  Dockerfile  README.md  docker_build.sh  docker_mc.sh  docker_run.sh  package.xml
config/: calib_euroc.m  calib_mars.m  calib_tumvi.m  euroc.txt  quat2rot.m  rot2quat.m  tumvi.txt
core/include/core/: mars-vins-facade.h
example_app/: generic_driver.cpp  generic_driver.h  vins_example_app.cpp
example_ros/: ros_driver.cpp  ros_driver.h  vins_ros_app.cpp
launch/: euroc.launch  tumvi.launch
